- Replace vlucas/phpdotenv to symfony/dotenv - Added illuminate/events - Updated Eloquent to 6.x - Added User::hasScope() method - Added PROCESSORS_STAT and PROCESSORS_DEBUG options to get more data from processors

--- a/core/.env.dist
+++ b/core/.env.dist
@@ -2,6 +2,9 @@ APP_NAME=VESP
 SITE_URL=http://localhost
 CORS=1 # Enable or diable Cross-Origin Resource Sharing
 
+PROCESSORS_STAT=1 # Show timing of processors
+PROCESSORS_DEBUG=1 # Show processors SQL requests to admins. Requires "debug" scope
+
 DB_DRIVER=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
