--- a/core/composer.json
+++ b/core/composer.json
@@ -5,11 +5,12 @@
     }
   },
   "require": {
-    "php": ">=7.1.0",
+    "php": ">=7.2.0",
     "slim/slim": "^3.12",
-    "illuminate/database": "^5.8",
+    "illuminate/database": "^6.12",
+    "illuminate/events": "^6.16",
     "firebase/php-jwt": "^5.0",
-    "vlucas/phpdotenv": "^3.6",
+    "symfony/dotenv": "^5.0",
     "robmorgan/phinx": "^0.11.1",
     "akrabat/ip-address-middleware": "^1.0",
     "ext-openssl": "*",
